--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christina Truong, Tech Educator and Content Creator</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body class="home">
     <!-- //  INTRO  // -->
     <header>
         <!-- Start content edits below this line. -->
