--- a/personal-site/resume.html
+++ b/personal-site/resume.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume | Christina Truong, Tech Educator and Content Creator</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body class="resume">
     <!-- //  INTRO  // -->
     <header>
         <h1>Christina Truong</h1>
