--- a/personal-site/resume.html
+++ b/personal-site/resume.html
@@ -40,9 +40,9 @@
                 <p>Videos, tutorials and a newsletter focusing on HTML, CSS and working in tech. Each video focuses on
                     one HTML or CSS concept. I go over how it works, when to use it and show some real world examples.
                     The companion articles are also posted on Medium as an alternative to video content.</p>
-                <a href="https://www.youtube.com/@madebychristina" target="_blank">YouTube</a>
-                <a href="https://medium.com/@christinatruong" target="_blank">Medium</a>
-                <a href="https://bychristina.substack.com/" target="_blank">Newsletter</a>
+                <a class="btn" href="https://www.youtube.com/@madebychristina" target="_blank">YouTube</a>
+                <a class="btn" href="https://medium.com/@christinatruong" target="_blank">Medium</a>
+                <a class="btn" href="https://bychristina.substack.com/" target="_blank">Newsletter</a>
             </section>
 
             <section>
