--- a/other stuff/box sizing.html
+++ b/other stuff/box sizing.html
@@ -10,5 +10,12 @@
     <div class="box-1">Box 1</div>
     <hr>
     <div class="box-2">Box 2</div>
+
+    <p class="first-block">Block</p>
+    <p class="second-block">Block</p>
+    <div class="container">
+        <span>Inline</span>
+        <span class="close-gap">Inline</span>
+    </div>
 </body>
 </html>
