Using flexbox, basic, flex grow, shirk, auto

--- a/personal-site/resume.html
+++ b/personal-site/resume.html
@@ -9,6 +9,7 @@
 </head>
 
 <body class="resume">
+    <a class="btn download-link" href="ctruong-resume.pdf">Download PDF</a>
     <!-- //  INTRO  // -->
     <header>
         <div class="content-wrapper">
