--- a/other stuff/explicit_grid.html
+++ b/other stuff/explicit_grid.html
@@ -14,6 +14,9 @@
         <div class="grid-item">4</div>
         <div class="grid-item">5</div>
         <div class="grid-item">6</div>
+        <div class="grid-item">4</div>
+        <div class="grid-item">5</div>
+        <div class="grid-item">6</div>
     </div>
     
     
