--- a/personal-site/resume.html
+++ b/personal-site/resume.html
@@ -91,20 +91,25 @@
             <p>My complete work history is available on <a href="https://ca.linkedin.com/in/christinatruong"
                     target="_blank">LinkedIn</a>.</p>
 
-            <section>
-                <h3>Tech Educator & Content Creator</h3>
-                <p>Self-employed</p>
-                <p>Jan 2012 - Present</p>
-
-                <p>Creating tech content focused on HTML, CSS and other front-end related topics. Offerings include
-                    online courses, a YouTube channel, written tutorials, workshops and training.</p>
+            <section class="work-item">
+                <div class="work-details">
+                    <h3>Tech Educator & Content Creator</h3>
+                    <p>Self-employed</p>
+                    <p>Jan 2012 - Present</p>
+                </div>
+                <div class="work-summary">
+                    <p>Creating tech content focused on HTML, CSS and other front-end related topics. Offerings include
+                        online courses, a YouTube channel, written tutorials, workshops and training.</p>
+                </div>
             </section>
 
-            <section>
-                <h3>Director of Curriculum</h3>
-                <p>Ladies Learning Code (now Canada Learning Code)</p>
-                <p>Jul 2014 - Feb 2016</p>
-
+            <section class="work-item">
+                <div class="work-details">
+                    <h3>Director of Curriculum</h3>
+                    <p>Ladies Learning Code (now Canada Learning Code)</p>
+                    <p>Jul 2014 - Feb 2016</p>
+                </div>
+                <div class="work-summary">
                 <p>Managed all curriculum for the adult training programs. Created teaching materials and standardized
                     the content and delivery.</p>
                 <p>Key contributions:</p>
@@ -117,13 +122,16 @@
                     <li>Implemented instructor training across 20+ Canadian chapters, focusing on creating inclusive and
                         engaging learning environments.</li>
                 </ul>
+                </div>
             </section>
 
-            <section>
-                <h3>Lead Front-End Developer</h3>
-                <p>Field iD</p>
-                <p>Mar 2013 - Feb 2014</p>
-
+            <section class="work-item">
+                <div class="work-details">
+                    <h3>Lead Front-End Developer</h3>
+                    <p>Field iD</p>
+                    <p>Mar 2013 - Feb 2014</p>
+                </div>
+                <div class="work-summary">
                 <p>Lead the front-end development for the in-house safety inspection software.</p>
                 <p>Key contributions:</p>
                 <ul>
@@ -132,6 +140,7 @@
                     </li>
                     <li>Standardized the site architecture and design.</li>
                 </ul>
+                </div>
             </section>
         </section>
 
